--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -111,4 +111,6 @@
     <string name="po_attach">PO Attach</string>
     <string name="projects">Projects</string>
     <string name="content_description">content description</string>
+    <string name="all_projects">All Projects</string>
+    <string name="project_name">Project Name</string>
 </resources>
