--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -113,4 +113,5 @@
     <string name="content_description">content description</string>
     <string name="all_projects">All Projects</string>
     <string name="project_name">Project Name</string>
+    <string name="photography">Photography</string>
 </resources>
