--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="all_projects">All Projects</string>
     <string name="project_name">Project Name</string>
+    <string name="photography">Photography</string>
 </resources>
