--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="purchasing">Purchasing</string>
     <string name="contact_person">CONTACT PERSON</string>
     <string name="client">CLIENT</string>
-    <string name="description">DESCRIPTION</string>
+    <string name="description">Description</string>
     <string name="status">STATUS</string>
     <string name="qty">QTY</string>
     <string name="new_purchase_request">New Purchase Request</string>
@@ -115,4 +115,14 @@
     <string name="all_projects">All Projects</string>
     <string name="project_name">Project Name</string>
     <string name="photography">Photography</string>
+    <string name="service_type">Service Type</string>
+    <string name="new_request">New Request</string>
+    <string name="item_name">Item Name</string>
+    <string name="digital">Digital</string>
+    <string name="offset">Offset</string>
+    <string name="print_type">Print Type</string>
+    <string name="delivery_address">Delivery Address</string>
+    <string name="attach_file">Attach File</string>
+    <string name="choose_file">Choose File</string>
+    <string name="no_file_choose">No file choose</string>
 </resources>
