--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -132,4 +132,8 @@
     <string name="add">Add</string>
     <string name="designer_in_charge">Designer in charge</string>
     <string name="login">Login</string>
+    <string name="job_orders">Job Orders</string>
+    <string name="dimensions">Dimensions</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
