--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -136,4 +136,8 @@
     <string name="dimensions">Dimensions</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="color">Color</string>
+    <string name="material">Material</string>
+    <string name="branding">Branding</string>
+    <string name="brand">Brand</string>
 </resources>
