--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name="test_text">Laurem epsum</string>
     <string name="test_date">17/11/2021</string>
     <string name="request_cost">Request Cost</string>
+    <string name="designer">DESIGNER</string>
 </resources>
