--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,5 @@
     <string name="request_cost">Request Cost</string>
     <string name="designer">DESIGNER</string>
     <string name="camera_type">Camera Type</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_supplier_cost">There’s no Supplier Cost \nadded yet</string>
 </resources>
