--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,4 +184,6 @@
     <string name="designer">DESIGNER</string>
     <string name="camera_type">Camera Type</string>
     <string name="no_supplier_cost">There’s no Supplier Cost \nadded yet</string>
+    <string name="job_order_number">Job Order Number</string>
+    <string name="po_number">PO Number</string>
 </resources>
