--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -162,4 +162,7 @@
     <string name="camera_type">Camera Type</string>
     <string name="no_supplier_cost">There’s no Supplier Cost added yet</string>
     <string name="job_order_number">Job Order Number</string>
+    <string name="new_job_order">New Job Order</string>
+    <string name="request_id">Request Id :</string>
+    <string name="final_cost">Final Cost :</string>
 </resources>
