--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -169,4 +169,6 @@
     <string name="screen_specs">Screen Specs</string>
     <string name="job_order">Job Order</string>
     <string name="download">Download</string>
+    <string name="hold">Hold</string>
+    <string name="ceo_approval">CEO Approval</string>
 </resources>
