--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,4 +205,8 @@
     <string name="no_attachments">No Attachments</string>
     <string name="apply">Apply</string>
     <string name="reset">Reset</string>
+    <string name="change_password">Change Password</string>
+    <string name="your_password">Your Password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_new_password">Confirm New Password</string>
 </resources>
