--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -180,4 +180,6 @@
     <string name="new_password">New Password</string>
     <string name="confirm_new_password">Confirm New Password</string>
     <string name="your_email">Your email</string>
+    <string name="all_companies">All Companies</string>
+    <string name="select_company">Select Company</string>
 </resources>
