--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,4 +212,5 @@
     <string name="your_email">Your email</string>
     <string name="all_companies">All Companies</string>
     <string name="select_company">Select Company</string>
+    <string name="add_company">Add Company</string>
 </resources>
