--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,7 @@
     <string name="sound">Sound</string>
     <string name="request_details">Request Details</string>
     <string name="country">Country</string>
+    <string name="city">City</string>
     <string name="new_quotation">New Quotation</string>
     <string name="supplier_name">Supplier Name</string>
     <string name="cost">Cost</string>
