--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,4 +220,5 @@
     <string name="log_out">Log Out</string>
     <string name="total">Total</string>
     <string name="per_unit">Per Unit</string>
+    <string name="cost_unit_total">Cost unit/total</string>
 </resources>
