--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
         <item>Job Order\nCreation</item>
         <item>Sales\nApproval</item>
         <item>Magdy\nApproval</item>
-        <item>Hesham\nApproval</item>
+        <item>Hisham\nApproval</item>
     </string-array>
 
 
