--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,4 +221,5 @@
     <string name="total">Total</string>
     <string name="per_unit">Per Unit</string>
     <string name="cost_unit_total">Cost unit/total</string>
+    <string name="qtyy">Qty :</string>
 </resources>
