--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@
     <string name="created_by">Created By</string>
     <string name="company_name">Company Name</string>
     <string name="po_number">PO Number</string>
+    <string name="po_number_text">PO Number(if Quotation approved ,please mention below)</string>
     <string name="submit">Submit</string>
     <string name="rejection_reason">Rejection Reason</string>
     <string name="po_attach">PO Attach</string>
