--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     //production
-<!--        <string name="app_name" translatable="false">CATalyst</string>-->
+    <!--        <string name="app_name" translatable="false">CATalyst</string>-->
 
     //Development
     <string name="app_name" translatable="false">CATalyst-dev</string>
@@ -232,4 +232,7 @@
     <string name="sample_nrequest">Sample\nRequest</string>
     <string name="po_nnumber">PO\nNumber</string>
     <string name="edit_po_number">Edit PO Number</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="all_job_orders">All Job Orders</string>
 </resources>
