--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -200,4 +200,6 @@
     <string name="po_nnumber">PO\nNumber</string>
     <string name="edit_po_number">Edit PO Number</string>
     <string name="all_job_orders">All Job Orders</string>
+    <string name="edit_job_order">Edit Job Order</string>
+    <string name="edit">Edit</string>
 </resources>
