--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -235,4 +235,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="all_job_orders">All Job Orders</string>
+    <string name="edit_job_order">Edit Job Order</string>
+    <string name="edit">Edit</string>
 </resources>
