--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,4 +238,5 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="resume">Resume</string>
+    <string name="edit_request">Edit Request</string>
 </resources>
