--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,4 +239,5 @@
     <string name="delete">Delete</string>
     <string name="resume">Resume</string>
     <string name="edit_request">Edit Request</string>
+    <string name="update_request">Update Request</string>
 </resources>
