--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,4 +240,7 @@
     <string name="resume">Resume</string>
     <string name="edit_request">Edit Request</string>
     <string name="update_request">Update Request</string>
+    <string name="extras">Extras</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
