--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,4 +243,6 @@
     <string name="extras">Extras</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_request">Add Request</string>
+    <string name="add_extras_request">Add Extras Request</string>
 </resources>
