--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -209,4 +209,5 @@
     <string name="extras">Extras</string>
     <string name="add_request">Add Request</string>
     <string name="add_extras_request">Add Extras Request</string>
+    <string name="quantity_of_logos">Quantity of logos</string>
 </resources>
