--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -245,4 +245,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_request">Add Request</string>
     <string name="add_extras_request">Add Extras Request</string>
+    <string name="quantity_of_logos">Quantity of logos</string>
 </resources>
