--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -211,4 +211,5 @@
     <string name="add_extras_request">Add Extras Request</string>
     <string name="quantity_of_logos">Quantity of logos</string>
     <string name="final_deliverables">Final deliverables</string>
+    <string name="read_all">Read All</string>
 </resources>
