--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -212,4 +212,5 @@
     <string name="quantity_of_logos">Quantity of logos</string>
     <string name="final_deliverables">Final deliverables</string>
     <string name="read_all">Read All</string>
+    <string name="extra_request_type">Extra request type</string>
 </resources>
