--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,13 @@
         <item>Extras</item>
     </string-array>
 
+    <string-array name="request_types_for_extra_requests">
+        <item>Purchasing</item>
+        <item>Printing</item>
+        <item>Production</item>
+        <item>Photography</item>
+    </string-array>
+
     <string-array name="currency">
         <item>EGP</item>
         <item>USD</item>
@@ -246,4 +253,5 @@
     <string name="quantity_of_logos">Quantity of logos</string>
     <string name="final_deliverables">Final deliverables</string>
     <string name="read_all">Read All</string>
+    <string name="extra_request_type">Extra request type</string>
 </resources>
