--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -213,4 +213,5 @@
     <string name="final_deliverables">Final deliverables</string>
     <string name="read_all">Read All</string>
     <string name="extra_request_type">Extra request type</string>
+    <string name="type">Type</string>
 </resources>
