--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -218,4 +218,5 @@
     <string name="percentage">Percentage</string>
     <string name="pay">Pay</string>
     <string name="adel_seen">Adel seen</string>
+    <string name="payments">Payments</string>
 </resources>
