--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,4 +259,5 @@
     <string name="percentage">Percentage</string>
     <string name="pay">Pay</string>
     <string name="adel_seen">Adel seen</string>
+    <string name="payments">Payments</string>
 </resources>
