--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -219,4 +219,5 @@
     <string name="pay">Pay</string>
     <string name="adel_seen">Adel seen</string>
     <string name="payments">Payments</string>
+    <string name="request_canceled">Request Canceled</string>
 </resources>
