--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,4 +263,6 @@
     <string name="request_canceled">Request Canceled</string>
     <string name="comments">Comments</string>
     <string name="add_comment">Add Comment</string>
+    <string name="seen_by_adel">Seen by adel</string>
+    <string name="not_seen_by_adel">Not seen by adel</string>
 </resources>
