--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,4 +265,6 @@
     <string name="add_comment">Add Comment</string>
     <string name="seen_by_adel">Seen by adel</string>
     <string name="not_seen_by_adel">Not seen by adel</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
