--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -224,4 +224,5 @@
     <string name="add_comment">Add Comment</string>
     <string name="seen_by_adel">Seen by adel</string>
     <string name="not_seen_by_adel">Not seen by adel</string>
+    <string name="select_project">Select Project</string>
 </resources>
