--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,4 +267,5 @@
     <string name="not_seen_by_adel">Not seen by adel</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_project">Select Project</string>
 </resources>
