--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -225,4 +225,8 @@
     <string name="seen_by_adel">Seen by adel</string>
     <string name="not_seen_by_adel">Not seen by adel</string>
     <string name="select_project">Select Project</string>
+    <string name="test_notification_open">Test Notification open</string>
+    <string name="_50">50</string>
+    <string name="total_cost">Total Cost</string>
+    <string name="attachment">Attachment</string>
 </resources>
