--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,7 +266,7 @@
     <string name="seen_by_adel">Seen by adel</string>
     <string name="not_seen_by_adel">Not seen by adel</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="select_project">Select Project</string>
     <string name="test_notification_open">Test Notification open</string>
     <string name="_50">50</string>
