--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -272,4 +272,5 @@
     <string name="_50">50</string>
     <string name="total_cost">Total Cost</string>
     <string name="attachment">Attachment</string>
+    <string name="ceo_reminder">CEO Reminder</string>
 </resources>
