--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -230,4 +230,5 @@
     <string name="total_cost">Total Cost</string>
     <string name="attachment">Attachment</string>
     <string name="ceo_reminder">CEO Reminder</string>
+    <string name="statistics">Statistics</string>
 </resources>
