--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -231,4 +231,5 @@
     <string name="attachment">Attachment</string>
     <string name="ceo_reminder">CEO Reminder</string>
     <string name="statistics">Statistics</string>
+    <string name="users">Users</string>
 </resources>
