--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,4 +283,5 @@
     <string name="ceo_reminder">CEO Reminder</string>
     <string name="statistics">Statistics</string>
     <string name="users">Users</string>
+    <string name="sales_reminder">Sales Reminder</string>
 </resources>
