--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -284,4 +284,5 @@
     <string name="statistics">Statistics</string>
     <string name="users">Users</string>
     <string name="sales_reminder">Sales Reminder</string>
+    <string name="procurement_reminder">Procurement Reminder</string>
 </resources>
