--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -241,4 +241,6 @@
     <string name="requests_count">Requests Count</string>
     <string name="types">Types</string>
     <string name="statuss">Status</string>
+    <string name="cat_projects">CAT Projects</string>
+    <string name="_237_projects">237 Projects</string>
 </resources>
